# PaymentProcessingService

./: .env.example  Dockerfile.api  Dockerfile.consumer  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_initial.py  7062c4b2c7a6_add_consumer_attempts.py
app/api/: deps.py  main.py
app/api/v1/: payments.py  router.py  schemas.py
app/core/: config.py  logging.py
app/domain/: events.py  result.py  value_objects.py
app/infra/broker/: publisher.py  topology.py
app/infra/db/: models.py  repositories.py  session.py
app/infra/gateway/: emulator.py
app/infra/outbox/: poller.py
app/infra/webhook/: sender.py
app/services/: payments.py
consumer/: handler.py  main.py
tests/: conftest.py  test_payments.py
